<master> add cache methods, rename param photo_must_deleted, fix swagger docs
